# insurance-calc

./: .coveragerc  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2024-11-23_initial_migration.py
src/: config.py  constants.py  db.py  main.py
src/insurance/: router.py  schemas.py  service.py
src/publisher/: kafka.py  service.py  utils.py
src/tariff/: models.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/integration/: conftest.py  test_calculate_insurance_route.py  test_create_tariff_route.py
tests/unit/: test_calculate_insurance.py  test_create_tariff.py  test_ud_tariff.py
